--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -72,6 +72,8 @@
           font-weight: 600;
           font-size: 1.4rem;
           cursor: pointer;
+          outline: none;
+
 
           &:hover {
             background: $Light-Pink;
