--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -13,6 +13,7 @@
     box-shadow: 0 1px 5px 1px rgba(0, 37, 46, 0.507);
     position: relative;
     overflow: hidden;
+    outline: none;
 
     .bg {
       position: absolute;
