--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -18,7 +18,7 @@
   .hero__btn {
     border: 1px solid $Pink;
     border-radius: 30px;
-    background: #fff;
+    background: #f00;
     box-shadow: 0 0 3px 0px $Light-Pink;
     cursor: pointer;
     color: $Pink;
