--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body {
 .hero .hero__btn {
   border: 1px solid #ff52bf;
   border-radius: 30px;
-  background: #f00;
+  background: #fff;
   box-shadow: 0 0 3px 0px #ff8fd8;
   cursor: pointer;
   color: #ff52bf;
